# olympus

./: README.md  combine_fisher.py  generate_events.py  plot_fisher_results.ipynb  pyproject.toml  run_fisher.py  setup.py
condor/: generate_1str_events.py  make_fisher_cascade_dag.py
examples/: 01_mock_photon_usage.ipynb  02_mock_photon_evaluation.ipynb  02_mock_photon_evaluation_old.ipynb  03_mock_photon_comparison.ipynb  04_noise_generation.ipynb  05_event_generation.ipynb  06_digital_twin.ipynb  effective_area.ipynb  export.py  generate_bioluminescence.py  generate_cascades.py  generate_cascades_normal_flow.py  generate_electrical.py  generate_events.py  generate_tracks.py  histograms15032022-235114.npy  histograms16032022-124856.npy  mock_photon_comparison.py  mock_photon_evaluation.py  mock_photon_usage.py  noise_generation.py  one_string_path_no_records.html  one_string_red_no_records.html  plot_detector.ipynb  simulate_cascades.ipynb  simulate_detector.py  test.py  three_strings.html
olympus/: constants.py  generators.py  utils.py
olympus/configuration/: __init__.py  generators.py  photon_propagation.py
olympus/event_generation/: __init__.py  constants.py  data.py  detector.py  event_generation.py  generators.py  injectors.py  lightyield.py  medium.py  photon_propagation.py  propagator.py  propagators.py  spectra.py  utils.py
olympus/event_generation/photon_propagation/: factory.py  interface.py  mock_photons.py  norm_flow_photons.py  utils.py
olympus/examples/: simulate_cascades.ipynb
olympus/optimization/: fisher_information.py
olympus/plotting/: __init__.py  plotting.py
